--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <h2><i class="fa fa-user fa-3x"></i></h2>
         <p class="lead" align="center|justify"> I'm a <b>Machine Learning </b>Enthusiast, an Independent Researcher and Technology Explorer. <br>
           <br>
-          My areas of interest are<b> Deeplearning </b>,<b> Machine Learning</b>  and <b> Natural User Interfaces (NUI)</b>. <br>
-          I am exploring how various ML algorithms can be incorporated into various use cases and scenarios to solve real-time problems, by automating the process and creating intelligent applications.
+          My areas of interest are<b> Deep Learning </b>,<b> Machine Learning</b>  and <b> Natural User Interfaces (NUI)</b>. <br>
+          I am exploring how various DL algorithms can be incorporated into various use cases and scenarios to solve real-time problems, by automating the process and creating intelligent solutions.
            </div>
     </div>
   </div>
@@ -365,7 +365,7 @@
     <div class="row">
       <div class="col-md-4 col-md-offset-4 text-center">
         <hr>
-        <p class="lead">Copyright © Rahul Kumar 2016</p>
+        <p class="lead">Made with &#9829; | Copyright © Rahul Kumar 2017</p>
       </div>
     </div>
   </div>
