--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="vert-text"> <img class="dp animated fadeInUp" src="./img/dp.jpg"> <br>
     <p class="lead1 animated1 fadeInUp1"> Hi! I'm <a class="audio-clip" onclick="fullname.playclip()"> <i class="fa fa-volume-up"></i> Rahul Kumar </a> </p>
     <ul class="list-inline ">
-      <li> <a title="Facebook" class="icon" href="http://www.facebook.com/goodrahstar" target="_blank"> <i class="fa fa-facebook fa-5x"></i> </a> </li>
+      <li> <a title="Facebook" class="icon" href="http://www.facebook.com/hellorahulk" target="_blank"> <i class="fa fa-facebook fa-5x"></i> </a> </li>
       <li> <a title="Academia" class="icon" href="https://sharda.academia.edu/RahulKumar" target="_blank"> <i class="fa fa-book fa-5x"></i> </a> </li>
       <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/goodrahstar" target="_blank"> <i class="fa fa-linkedin fa-5x"></i> </a> </li>
       <li> <a title="Google+" class="icon" href="https://plus.google.com/+RAHULKUMAR19" target="_blank"> <i class="fa fa-google-plus fa-5x"></i> </a> </li>
