--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="article:author" content="index.html"/>
 <meta property="og:url" content="index.html"/>
 
-<link rel="image_src" href="img/dp.jpg">
+<link rel="image_src" href="img/dp_new.jpg">
 <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
 <link rel="author" href="https://plus.google.com/+RAHULKUMAR19">
 <link rel="canonical" href="index.html"/>
@@ -77,12 +77,12 @@
   <h2 class="location-label" style="opacity: 0.1;">Bengaluru, India</h2>
   <div class="img-src" style="background-image: url(img/B/bg0-blur.jpg)"></div>
   <div class="img-src scroll-img" style="background-image: url(img/B/bg0.jpg); opacity: 0;"></div>
-  <div class="vert-text"> <img class="dp animated fadeInUp" src="./img/dp.jpg"> <br>
+  <div class="vert-text"> <img class="dp animated fadeInUp" src="./img/dp_new.jpg"> <br>
     <p class="lead1 animated1 fadeInUp1"> Hi! I'm <a class="audio-clip" onclick="fullname.playclip()"> <i class="fa fa-volume-up"></i> Rahul Kumar </a> </p>
     <ul class="list-inline ">
       <li> <a title="Facebook" class="icon" href="http://www.facebook.com/hellorahulk" target="_blank"> <i class="fa fa-facebook fa-5x"></i> </a> </li>
       <li> <a title="Academia" class="icon" href="https://sharda.academia.edu/RahulKumar" target="_blank"> <i class="fa fa-book fa-5x"></i> </a> </li>
-      <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/goodrahstar" target="_blank"> <i class="fa fa-linkedin fa-5x"></i> </a> </li>
+      <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/hellorahulk" target="_blank"> <i class="fa fa-linkedin fa-5x"></i> </a> </li>
       <li> <a title="Google+" class="icon" href="https://plus.google.com/+RAHULKUMAR19" target="_blank"> <i class="fa fa-google-plus fa-5x"></i> </a> </li>
       <li> <a title="Github" class="icon" href="https://github.com/goodrahstar" target="_blank"> <i class="fa fa-github fa-5x"></i> </a> </li>
       <li> <a title="Twitter" class="icon" href="https://twitter.com/hellorahulk" target="_blank"> <i class="fa fa-twitter fa-5x"></i> </a> </li>
@@ -122,29 +122,45 @@
 
      <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
-        <div class="service-item"> <a href="http://www.accenture.com/" target="_blank"> <img class="work-icon" src="./img/work/accenture_logo.jpg"> </a>
-          <h3>Accenture<br>
-            <small>Oct '14 - Present</small></h3>
-          <p class="lead"> I explore and implement <b>machine learning</b> algorithms for various use cases - NLP, Feature extraction, Classification, Predictive model, etc.  My current areas of R&D focus include NLP parsing, speech to text conversion and Q/A service. Previously, I have also explored <b>Biometrics</b> for POC's and client project delivery.  </p>
+        <div class="service-item"> <a href="http://www.botsupply.ai/" target="_blank"> <img class="work-icon" src="./img/work/botsupply.jpg"> </a>
+          <h3>BotSupply.ai<br>
+            <h4> Co-Chief AI Scientist </h4></h3>
+            <h3><small>Dec '16 - Present</small></h3>
+
+          <p class="lead">Building NLU engines to support Nordic languages like Danish, Italian, etc. Major areas of focus are Conversational Agents, Designing CNN and RNN architectures for complex use cases and Reinforcement Learning for active learning.  </p>
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <div class="service-item"> <a href="http://www.happiestminds.com/" target="_blank"> <img class="work-icon" src="./img/work/hm.jpg"> </a>
+            <h3>Happiest Minds Technologies<br>
+              <small>Sep '16 - Oct '17 </small></h3>
+            <p class="lead"> Building Cognitive solutions around chatbots, Q/A engines for mCaaS. Focusing on implementing NLP engines using <b>Statistical and Probabilistic </b>Modelling. </p>
+          </div>
+        </div>
+        <div class="col-md-4  text-center">
+          <div class="service-item"> <a href="http://www.accenture.com/#" target="_blank"> <img class="work-icon" src="./img/work/accenture_logo.jpg"> </a>
+            <h3>Accenture<br>
+              <small>Oct '14 - Sep '16'</small></h3>
+            <p class="lead"> I explore and implement <b>machine learning</b> algorithms for various use cases - NLP, Feature extraction, Classification, Predictive model, etc.  My current areas of R&D focus include NLP parsing, speech to text conversion and Q/A service. Previously, I have also explored <b>Biometrics</b> for POC's and client project delivery.  </p>
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="service-item"> <a href="http://www.vidya.edu.in/#" target="_blank"> <img class="work-icon" src="./img/work/vidya_logo.jpg"> </a>
+            <h3>Vidya Knowledge Park<br>
+              <small>Aug '12 - Jun '14</small></h3>
+            <p class="lead"> I did research here, broadly in Biometrics and Computer Vision, under Associate Professor <b>Rohit Khokher</b>. </p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
     <div class="row">
-      <div class="col-md-4 text-center">
-        <div class="service-item"> <a href="http://www.specta.in/" target="_blank"> <img class="work-icon" src="./img/work/specta.png"> </a>
-          <h3>Specta<br>
-            <small>Jan '14 </small></h3>
-          <p class="lead"> I do research here and develop human friendly applications. </p>
-        </div>
-      </div>
-      <div class="col-md-4 text-center">
-        <div class="service-item"> <a href="http://www.vidya.edu.in/#" target="_blank"> <img class="work-icon" src="./img/work/vidya_logo.jpg"> </a>
-          <h3>Vidya Knowledge Park<br>
-            <small>Aug '12 - Jun '14</small></h3>
-          <p class="lead"> I did research here, broadly in Biometrics and Computer Vision, under Associate Professor <b>Rohit Khokher</b>. </p>
-        </div>
-      </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 col-md-offset-4 text-center">
         <div class="service-item"> <a href="https://www.sharda.ac.in" target="_blank"> <img class="work-icon" src="./img/work/sharda_logo.png"> </a>
           <h3>Sharda University<br>
             <small>Aug '10 - May '14</small></h3>
@@ -327,7 +343,7 @@
       </div>
       <div class="col-md-4 text-center">
         <h3><i class="fa fa-gear fa-2x fa-spin"></i></h3>
-        <p class="lead"> I love to explore latest technologies. I am currently working on <a href="http://deeplearning.net/tutorial/lenet.html" target="_blank">Deeplearning (CNN and RNN)</a>, <a href="https://www.coursera.org/learn/machine-learning" target="_blank">Machine learning modelling</a> and <a href="http://en.wikipedia.org/wiki/Biometrics" target="_blank">Biometrics</a>.</p>
+        <p class="lead"> I love to explore latest technologies. Extensively using #TensorFlow and #PyTorch. I am currently working on <a href="http://deeplearning.net/tutorial/lenet.html" target="_blank">Deeplearning (CNN and RNN)</a>, <a href="https://www.coursera.org/learn/machine-learning" target="_blank">Machine learning modelling</a> and <a href="http://en.wikipedia.org/wiki/Biometrics" target="_blank">Biometrics</a>.</p>
       </div>
     </div>
     <br>
@@ -364,15 +380,17 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4 text-center">
+        <!-- <hr> -->
+        <p class="lead">Made with &#9829;  </p>
         <hr>
-        <p class="lead">Made with &#9829; | Copyright © Rahul Kumar 2017</p>
+        <p>Copyright © Rahul Kumar 2017</p>
       </div>
     </div>
   </div>
 </footer>
 <script src="js/jquery-1.11.0.min.js"></script> <script async src="js/bootstrap.min.js"></script> <script async src="js/main.min.js"></script>
 
-<script src="https://rawgit.com/goodrahstar/firefly/master/jquery.firefly-0.3-min.js"> </script>
+<!-- <script src="https://rawgit.com/goodrahstar/firefly/master/jquery.firefly-0.3-min.js"> </script>
 <script type="text/javascript">
 $(document).ready(function()
   {$.firefly({ color: '#00BFFF',
@@ -381,7 +399,7 @@ $(document).ready(function()
 	maxPixel: 2,
 	total : 65});
   });
-</script>
+</script> -->
 
 </body>
 </html>
