added latest project

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 <div id="fame" class="fame">
   <div class="container">
     <div class="row">
+      <!-- <div class="col-md-9 col-md-offset-2 text-center"><h1> RESEARCH PAPERS </h1> </div> -->
       <div class="col-md-9 col-md-offset-2 text-center"><img class="projects-icon" src="img/work/dubai.jpg">
         <p class="lead">Rohit Khokher, R.C. Singh, <b>Rahul Kumar</b>,<br>
         <a href="http://iieng.org/images/proceedings_pdf/8888E0314582.pdf">
@@ -207,7 +208,14 @@
         </b>
         </p>
       </div>
-
+      <!-- <div class="col-md-9 col-md-offset-2 text-center"><h1> BLOGS </h1>
+        <p class="lead" align="left">
+          1. Chatbot is a new wave . <br>
+          2. Installing Tensorflow on windows bash. <br>
+          3. Making TensorFlow as production ready using Docker. <br>
+          4. Announcing Pachamama. <br>
+        </p>
+      </div> -->
 
 
     </div>
@@ -224,6 +232,31 @@
       <div class="col-md-4 col-md-offset-4 text-center">
         <h2><i class="fa fa-code fa-3x"></i></h2>
         <br>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <div class="projects-item"> <a href="https://github.com/goodrahstar/tf-sentiment-docker" target="_blank"> <img class="projects-icon" src="img/proj/tensordock.png"> </a>
+          <h3>TensorDock<br>
+            <small>March '17 - April '17</small></h3>
+          <p class="lead">Created a <b>Docker</b> container to deploy the <b>Tensorflow </b>models in production.Implemented a text classification model using Convolutional Neural Netowork and used web.py to make a RESTful service. </p>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="projects-item"> <a href="http://213.32.247.222:8089/#embeddings" target="_blank"> <img class="projects-icon" src="img/proj/danish.png"> </a>
+          <h3>Danish Embeddings<br>
+            <small>April '17 - July '17'</small></h3>
+          <p class="lead">Created a <b>Danish</b> word2vec model using <b>Tensorflow</b> with the embedding_size = 300 and vocab_size = ~324k. Used <b>TensorBoard</b> for embeddings visualization. Feel free to check it out at  <a href='http://213.32.247.222:8089/#embeddings'>link </a>  </p>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="projects-item"> <a href="https://medium.com/botsupply/announcing-pachamama-1-0-b50d24a3fc19" target="_blank"> <img class="projects-icon" src="https://goo.gl/6as6nN"> </a>
+          <h3> Pachamama <br>
+            <small>April '17 - September '17</small></h3>
+          <p class="lead">Developed a NLU framework incorporating various Deep Learning architecture to handel NLP tasks. This f/w currently supports Danish, Italian and English languages. All the intelligence in chatbots developed by <a href='https://www.botsupply.ai'> BotSupply</a> is power by Pachamama.  </p>
+        </div>
       </div>
     </div>
 
