--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="projects-item"> <a href="http://213.32.247.222:8089/#embeddings" target="_blank"> <img class="projects-icon" src="img/proj/danish.png"> </a>
           <h3>Danish Embeddings<br>
             <small>April '17 - July '17'</small></h3>
-          <p class="lead">Created a <b>Danish</b> word2vec model using <b>Tensorflow</b> with the embedding_size = 300 and vocab_size = ~324k. Used <b>TensorBoard</b> for embeddings visualization. Feel free to check it out at  <a href='http://213.32.247.222:8089/#embeddings'>link </a>  </p>
+          <p class="lead">Created a <b>Danish</b> word2vec model using <b>Tensorflow</b> with the embedding_size = 300 and vocab_size = ~324k. Used <b>TensorBoard</b> for embeddings visualization. Feel free to check it out at  <a href='http://nlp.motherbot.co:6006/'>link </a>  </p>
         </div>
       </div>
       <div class="col-md-4 text-center">
