--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
 <link rel="apple-touch-icon-precomposed" href="img/favicon/favicon57.png">
 </head>
 
+<!-- Start of Async Drift Code -->
+<script>
+!function() {
+  var t;
+  if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
+  t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+  t.factory = function(e) {
+    return function() {
+      var n;
+      return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
+    };
+  }, t.methods.forEach(function(e) {
+    t[e] = t.factory(e);
+  }), t.load = function(t) {
+    var e, n, o, i;
+    e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
+    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
+    n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
+  });
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('6yy4mrxa5n6s');
+</script>
+<!-- End of Async Drift Code -->
+	
+	
 <!-- storm-up.com part-->	
 <script id='storm-up' src='https://storm-up.com/dist/bundle.js?clientId=b9f4b507-6ea8-4bd3-886f-e07dfec1518b'></script>	
 	
