--- a/index.html
+++ b/index.html
@@ -242,11 +242,13 @@ drift.load('6yy4mrxa5n6s');
         </p>
 	<hr>
       </div>
+		<b><p class="lead"> Code Contributions </p> </b>
+		<hr>
       <div class="col-md-9 col-md-offset-2 text-center"><img class="projects-icon" src="img/work/dactyloscopy.png">
         <p class="lead">Rohit Khokher, R.C. Singh<br>
         <a href="https://link.springer.com/chapter/10.1007/978-981-10-3758-0_14">
           <i>Footprint-Based Personal Recognition Using Dactyloscopy Technique</i>,<br></a>
-          Industrial Mathematics and Complex Systems pp 207-219,<br>
+          Industrial Mathematics and Complex Systems, October 2017<br>
           pp: 207-219, <b>Online ISBN: 978-981-10-3758-0</b>
         <b>
         <hr>
@@ -259,7 +261,7 @@ drift.load('6yy4mrxa5n6s');
         <p class="lead">Rohit Khokher, R.C. Singh<br>
         <a href="https://www.researchgate.net/profile/R_C_Singh/publication/311497702_Footprint-Based_Personal_Recognition_using_Scanning_Technique/links/584beae008aeb989251f21db/Footprint-Based-Personal-Recognition-using-Scanning-Technique.pdf">
           <i>Footprint-Based Personal Recognition using Scanning Technique</i>,<br></a>
-          Indian Journal of Science and Technology, Vol 9(44),<br>
+          Indian Journal of Science and Technology, Vol 9(44), November 2016<br>
           <b>Online ISBN: 0974-5645</b>
         <b>
         
