--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ drift.load('6yy4mrxa5n6s');
     <br>
 
      <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
+      <div class="col-md-2  text-center">
         <div class="service-item"> <a href="http://www.jatana.ai/" target="_blank"> <img class="work-icon" src="./img/work/jatana.png"> </a>
           <h3>Jatana.ai<br>
             <h4> Chief AI Scientist </h4></h3>
@@ -160,8 +160,8 @@ drift.load('6yy4mrxa5n6s');
       </div>
 	     
 	     
-     <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
+     #<div class="row">
+      <div class="col-md-2 text-center">
         <div class="service-item"> <a href="http://www.botsupply.ai/" target="_blank"> <img class="work-icon" src="./img/work/botsupply.jpg"> </a>
           <h3>BotSupply.ai<br>
             <h4> Co-Chief AI Scientist </h4></h3>
