--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ drift.load('6yy4mrxa5n6s');
       </div>
 	     
 	     
-     #<div class="row">
+<!--      <div class="row"> -->
       <div class="col-md-2 text-center">
         <div class="service-item"> <a href="http://www.botsupply.ai/" target="_blank"> <img class="work-icon" src="./img/work/botsupply.jpg"> </a>
           <h3>BotSupply.ai<br>
