--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    </script>
    <!-- End of Async Drift Code -->
    <!-- storm-up.com part-->
-   <script id='storm-up' src='https://storm-up.com/dist/bundle.js?clientId=b9f4b507-6ea8-4bd3-886f-e07dfec1518b'></script>
+<!--    <script id='storm-up' src='https://storm-up.com/dist/bundle.js?clientId=b9f4b507-6ea8-4bd3-886f-e07dfec1518b'></script> -->
    <!-- Google analytics part-->
    <script type="text/javascript">
       var _gaq = _gaq || [];
