--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                </div>
                <div class="col-md-9 col-md-offset-2 text-center">
                   <b>
-                     <p class="lead"> Code Contributions </p>
+                     <p class="lead"> <b>Code Contributions</b> </p>
                   </b>
                   <hr>
                </div>
