--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
          </div>
          <br>
          <div class="row">
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 col-md-offset-1 text-center">
                <div class="service-item">
                   <a href="http://www.jatana.ai/" target="_blank"> <img class="work-icon" src="./img/work/jatana.png"> </a>
                   <h3>
@@ -164,7 +164,7 @@
                   <p class="lead">Building Deep Learning solutions on scale for enterprises. Major areas of focus are Generative Artificial Intelligence, Continues learning platform using Reinforcement Learning. </p>
                </div>
             </div>
-            <div class="col-md-4  text-center">
+            <div class="col-md-4 col-md-offset-1 text-center">
                <div class="service-item">
                   <a href="http://www.botsupply.ai/" target="_blank"> <img class="work-icon" src="./img/work/botsupply.jpg"> </a>
                   <h3>
@@ -260,7 +260,7 @@
                   <img class="projects-icon" src="img/work/ICRTAE.png">
                   <p class="lead">Rohit Khokher, R.C. Singh, Saiyam Diwan, <b>Rahul Kumar</b>,
                      <br>
-                     <a href="https://s3.amazonaws.com/academia.edu.documents/31654693/ICRTAE-Final.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1523535281&Signature=%2BqetXcXm5LrnC9fZFLSl9fd%2FhAA%3D&response-content-disposition=inline%3B%20filename%3DGeneration_of_private_512-bit_Security_K.pdf" target="_blank">
+                     <a href="https://github.com/goodrahstar/goodrahstar.github.io/blob/master/papers/Generation_of_private_512-bit_Security_K.pdf" target="_blank">
                      <i>Generation of private 512-Bit Security using Human Palm Print</i></a>,
                      <br> International Conference on Recent technologies in Advanced Electronics (ICRTAE 2013),
                      <br> pp: 176-193 ,
