--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <h1>And the résumé...</h1>
             <br>
             <br>
-            <a href="resume/RAHUL KUMAR CV.pdf" class="btn btn-lg btn-default btn-special" target="_blank"> <i class="fa fa-eye fa-2x"></i> </a>
+            <a href="resume/Rahul_cv_2018.pdf" class="btn btn-lg btn-default btn-special" target="_blank"> <i class="fa fa-eye fa-2x"></i> </a>
          </div>
       </div>
       <footer id="footer" class="footer">
