--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <meta property="og:image" content="index.html" />
       <meta property="article:author" content="index.html" />
       <meta property="og:url" content="index.html" />
-      <link rel="image_src" href="img/dp_new.jpg">
+      <link rel="image_src" href="img/Rahul-pic.JPG">
       <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
       <link rel="author" href="https://plus.google.com/+RAHULKUMAR19">
       <link rel="canonical" href="index.html" />
