--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
          <div class="img-src" style="background-image: url(img/B/bg0-blur.jpg)"></div>
          <div class="img-src scroll-img" style="background-image: url(img/B/bg0.jpg); opacity: 0;"></div>
          <div class="vert-text">
-            <img class="dp animated fadeInUp" src="./img/dp_new.jpg">
+            <img class="dp animated fadeInUp" src="./img/Rahul-pic.JPG">
             <br>
             <p class="lead1 animated1 fadeInUp1"> Hi! I'm
                <a class="audio-clip" onclick="fullname.playclip()"> <i class="fa fa-volume-up"></i> Rahul Kumar </a>
@@ -529,7 +529,7 @@
                   <!-- <hr> -->
                   <p class="lead">Made with &#9829; </p>
                   <hr>
-                  <p>Copyright © Rahul Kumar 2019</p>
+                  <p>Copyright © Rahul Kumar 2020</p>
                </div>
             </div>
          </div>
